# luapico

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  TODO  config.h
.github/workflows/: test.yml
binaries/: picolua.uf2
bute2/include/bute2/: bute2.h
bute2/src/: bute2.c
examples/: adctest.lua  blink.lua  led_fade.lua  ll.lua  mpu6050.lua
interface/: README.md
interface/include/interface/: compat.h  interface.h
interface/src/: compat.c  interface.c
klib/include/klib/: defs.h  list.h  string.h  term.h
klib/src/: list.c  string.c  term.c
libluapico/include/libluapico/: libluapico.h  picoutils.h
libluapico/src/: libluapico.c  picoutils.c
lua/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  linit.c  loadlib.c  lua.c  luaconf.h  lvm.c
shell/include/shell/: errcodes.h  fileutil.h  shell.h  shell_commands.h
shell/src/: fileutil.c  main.c  shell.c  shell_cmd_cat.c  shell_cmd_cp.c  shell_cmd_df.c  shell_cmd_echo.c  shell_cmd_format.c  shell_cmd_i2cdetect.c  shell_cmd_ls.c  shell_cmd_mkdir.c  shell_cmd_rm.c  shell_cmd_yrecv.c  shell_cmd_ysend.c  startfiles.c
storage/include/storage/: storage.h
storage/src/: lfs.c  lfs_util.c  storage.c
ymodem/include/ymodem/: ymodem.h
ymodem/src/: ymodem.c
